### Changed - レイアウト調整

--- a/views/events/screeningEvent/add.ejs
+++ b/views/events/screeningEvent/add.ejs
@@ -2,7 +2,7 @@
     <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-lg">
         <div class="modal-content" role="document">
             <div class="modal-header">
-                <h4 class="modal-title">スケジュール新規登録</h4>
+                <h4 class="modal-title">スケジュール登録</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
@@ -10,7 +10,7 @@
 
             <div class="modal-body">
                 <div class="panel-body form-container">
-                    <form class="p-3 bg-light-gray">
+                    <form class="">
                         <div class="form-group">
                             <div class="row">
                                 <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0" for="theater">劇場<font
@@ -339,7 +339,7 @@
             <input type="hidden" name="saleStartDays" value="">
             <div class="modal-footer">
                 <button type="button" class="btn bg-dark-gray text-white" data-dismiss="modal">閉じる</button>
-                <button type="button" class="btn btn-primary regist-button">パフォーマンスを登録</button>
+                <button type="button" class="btn btn-primary regist-button">登録</button>
             </div>
         </div>
     </div>
