--- a/views/events/screeningEvent/edit.ejs
+++ b/views/events/screeningEvent/edit.ejs
@@ -9,7 +9,7 @@
             </div>
             <div class="modal-body">
                 <div class="panel-body">
-                    <form class="p-3 bg-light-gray">
+                    <form class="">
                         <ul class="list-group mb-3">
                             <li class="list-group-item film">作品 : <span></span></li>
                             <li class="list-group-item theater">劇場 : <span></span></li>
