--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja" class="perfect-scrollbar-on">
+<html lang="ja" class="perfect-scrollbar-on" style="font-size:14px;">
 <%- include('./head') %>
 
 <body>
